navbar alignment fixed

--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -110,6 +110,11 @@
       padding-top: 26px;
     }
 
+    .hovermenu__listitems ul  li{
+      margin: 0;
+      display: block;
+    }
+
     .hovermenu__listitems ul li a {
       font-style: normal;
       font-weight: normal;
